--- a/auth.html
+++ b/auth.html
@@ -13,7 +13,7 @@
         <div class="header-top">
             <div class="logo">
                 <a href="medicines.html">
-                <img src="logo.png" alt="Tata 1mg Logo">
+                    <img src="asset/logo.jpg" alt="Tata 1mg Logo">
                 </a>
             </div>
             
