--- a/ayurveda.html
+++ b/ayurveda.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tata 1mg - Ayurveda</title>
-    <link rel="stylesheet" href="styles.css"></head>
+    <title>Ayurveda</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
 <body>
-    <!-- Header -->
     <header>
         <div class="header-top">
             <div class="logo">
                 <a href="medicines.html">
-                <img src="asset/logo.jpg" alt="Tata 1mg Logo">
+                    <img src="asset/logo.jpg" alt="Tata 1mg Logo">
                 </a>
             </div>
             
@@ -34,13 +34,100 @@
             </div>
         </div>
     </header>
-
-    <!-- Ayurveda Content -->
-    <section class="content-section">
-        <h1>Ayurveda</h1>
-        <p>This is the Ayurveda page of Tata 1mg. Explore Ayurvedic products and remedies here.</p>
-    </section>
-    <script>script.js</script>
-
+    <main>
+        <section class="ayurveda-hero">
+            <div class="hero-content">
+                <div class="hero-text">
+                    <img src="ayurveda-logo.png" alt="Ayurveda Logo" class="hero-logo">
+                    <h1>Ayurveda</h1>
+                    <h2>Discover the Power of Nature</h2>
+                </div>
+                <div class="hero-image">
+                    <img src="ayurveda-hero-image.png" alt="Ayurveda Hero Image">
+                </div>
+            </div>
+            <div class="hero-subtext">
+                <h3>Ancient Wisdom for Modern Wellness</h3>
+                <p>Explore authentic Ayurvedic herbs and remedies for holistic health.</p>
+            </div>
+        </section>
+        <section class="ayurveda-featured-herbs">
+            <h2>Featured Herbs</h2>
+            <div class="herbs-grid">
+                <div class="herb-card">
+                    <img src="ashwagandha.png" alt="Ashwagandha">
+                    <p>Ashwagandha</p>
+                    <span class="read-more">read more</span>
+                </div>
+                <div class="herb-card">
+                    <img src="shilajit.png" alt="Shilajit">
+                    <p>Shilajit</p>
+                    <span class="read-more">read more</span>
+                </div>
+                <div class="herb-card">
+                    <img src="giloy.png" alt="Giloy">
+                    <p>Giloy</p>
+                    <span class="read-more">read-more</span>
+                </div>
+                <div class="herb-card">
+                    <img src="amla.png" alt="Amla">
+                    <p>Amla</p>
+                    <span class="read-more">read more</span>
+                </div>
+            </div>
+        </section>
+        <section class="ayurveda-categories">
+            <h2>Ayurvedic Categories</h2>
+            <div class="categories-grid">
+                <div class="category-card">
+                    <img src="skin-care.png" alt="Skin Care">
+                    <p>Skin Care</p>
+                    <span class="read-more">read more</span>
+                </div>
+                <div class="category-card">
+                    <img src="digestive-care.png" alt="Digestive Care">
+                    <p>Digestive Care</p>
+                    <span class="read-more">read more</span>
+                </div>
+                <div class="category-card">
+                    <img src="hair-care.png" alt="Hair Care">
+                    <p>Hair Care</p>
+                    <span class="read-more">read more</span>
+                </div>
+            </div>
+        </section>
+        <section class="ayurveda-glossary">
+            <h2>Ayurveda Ingredients Glossary</h2>
+            <div class="glossary-grid">
+                <div class="glossary-card">
+                    <p>Abhayarishta</p>
+                    <span class="read-more">read more</span>
+                </div>
+                <div class="glossary-card">
+                    <p>Abhrak</p>
+                    <span class="read-more">read more</span>
+                </div>
+                <div class="glossary-card">
+                    <p>Achyranthes aspera</p>
+                    <span class="read-more">read more</span>
+                </div>
+                <div class="glossary-card">
+                    <p>Adoosa</p>
+                    <span class="read-more">read more</span>
+                </div>
+                <!-- Add more glossary items as needed -->
+            </div>
+        </section>
+        <section class="ayurveda-footer-links">
+            <div class="footer-column">
+                <a href="#">Ayurveda Articles</a>
+                <a href="#">Hindi Articles</a>
+                <a href="#">Care Plan</a>
+            </div>
+        </section>
+        <section class="ayurveda-disclaimer">
+            <p>© 2025 Tata 1mg. All rights reserved. All medicines are dispensed in compliance with the Drugs and Cosmetics Act, 1940 and Drugs and Cosmetics Rules, 1945.</p>
+        </section>
+    </main>
 </body>
 </html>
