--- a/careplan.html
+++ b/careplan.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tata 1mg - Care Plan</title>
-    <link rel="stylesheet" href="styles.css"></head>
+    <title>Care Plan</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
 <body>
-    <!-- Header -->
     <header>
         <div class="header-top">
             <div class="logo">
                 <a href="medicines.html">
-                <img src="asset/logo.jpg" alt="Tata 1mg Logo">
+                    <img src="asset/logo.jpg" alt="Tata 1mg Logo">
                 </a>
             </div>
             
@@ -34,13 +34,143 @@
             </div>
         </div>
     </header>
-
-    <!-- Care Plan Content -->
-    <section class="content-section">
-        <h1>Care Plan</h1>
-        <p>This is the Care Plan page of Tata 1mg. Learn about our subscription plans for extra savings and benefits here.</p>
-    </section>
-    <script>script.js</script>
-
+    <main>
+        <section class="careplan-hero">
+            <div class="hero-content">
+                <div class="hero-text">
+                    <img src="careplan-logo.png" alt="Care Plan Logo" class="hero-logo">
+                    <h1>Care Plan</h1>
+                    <h2>Reduce Your Medical Expenses by HALF</h2>
+                    <p>Save for things that make you happy with our subscription plans.</p>
+                    <button class="explore-plans-btn">Explore plans</button>
+                </div>
+                <div class="hero-image">
+                    <img src="careplan-hero-image.png" alt="Care Plan Hero Image">
+                </div>
+            </div>
+        </section>
+        <section class="careplan-benefits">
+            <h2>Benefits</h2>
+            <div class="benefits-grid">
+                <div class="benefit-card">
+                    <img src="discount.png" alt="Discount">
+                    <h3>Get Extra 4% Discounts</h3>
+                    <p>Guaranteed savings over & above promotional offers on all product purchases.</p>
+                </div>
+                <div class="benefit-card">
+                    <img src="shipping.png" alt="Free Shipping">
+                    <h3>No Shipping Charges</h3>
+                    <p>Free shipping on orders above ₹249. Unlimited free shipping on orders above ₹800.</p>
+                </div>
+                <div class="benefit-card">
+                    <img src="consultation.png" alt="Free Consultation">
+                    <h3>Free E-Consultation</h3>
+                    <p>Free consultation from experts across 26 specialties, including dieticians.</p>
+                </div>
+                <div class="benefit-card">
+                    <img src="offers.png" alt="Exclusive Offers">
+                    <h3>Exclusive Offers</h3>
+                    <p>Member-exclusive offers from brands like Lenskart, Clove & more.</p>
+                </div>
+                <div class="benefit-card">
+                    <img src="delivery.png" alt="Rapid Delivery">
+                    <h3>Introducing Rapid Delivery</h3>
+                    <p>Same-day or next-day delivery on available medicines in selected cities.</p>
+                </div>
+            </div>
+            <h2>Additional Benefits</h2>
+            <div class="additional-benefits-grid">
+                <div class="benefit-card">
+                    <img src="early-access.png" alt="Early Sale Access">
+                    <h3>Early Sale Access</h3>
+                    <p>Shop first during sale days with exclusive deals across all categories.</p>
+                </div>
+                <div class="benefit-card">
+                    <img src="priority.png" alt="Priority Processing">
+                    <h3>Priority Processing</h3>
+                    <p>Your orders are prioritized for validation and processing.</p>
+                </div>
+                <div class="benefit-card">
+                    <img src="support.png" alt="Premium Customer Care">
+                    <h3>Premium Customer Care</h3>
+                    <p>Dedicated support with faster query resolution for premium members.</p>
+                </div>
+            </div>
+        </section>
+        <section class="careplan-plans">
+            <h2>Choose a Plan That’s Right for You</h2>
+            <div class="plans-grid">
+                <div class="plan-card">
+                    <h3>3 Months Plan <span class="new-badge">NEW</span></h3>
+                    <p class="price">₹165</p>
+                    <p class="per-month">₹55/month</p>
+                    <button class="join-now-btn">Join now</button>
+                </div>
+                <div class="plan-card">
+                    <h3>6 Months Plan</h3>
+                    <p class="price">₹275</p>
+                    <p class="per-month">₹46/month <span class="save">Save 16%</span></p>
+                    <button class="join-now-btn">Join now</button>
+                </div>
+            </div>
+            <div class="savings-calculator">
+                <h3>How Much Will I Save?</h3>
+                <p class="savings-amount">₹1490 <span>Savings in 3 Months</span></p>
+                <p>Assuming you spend ₹1000 on medicines monthly and visit a specialist (₹500) once every 3 months.</p>
+            </div>
+        </section>
+        <section class="careplan-testimonials">
+            <h2>See What Our Members Are Saying</h2>
+            <div class="testimonials-grid">
+                <div class="testimonial-card">
+                    <p>"Mujhe es plan mein dawaiyon pe discounts ke saath saath HbA1c test bhi milta hai... Sasta toh hai hi, dusra agar ek hi test kara lenge toh bhi humara poora paisa vasool ho gaya."</p>
+                    <p class="author">Sonu Shukla</p>
+                </div>
+                <div class="testimonial-card">
+                    <p>"Har purchase pe itna discount kahi nahi milta... With this plan I get free delivery on every item, HbA1c tests, and e-consultation."</p>
+                    <p class="author">Rakesh Kumar Gupta</p>
+                </div>
+                <div class="testimonial-card">
+                    <p>"I use DCP for tests and purchase of other items. There is free delivery on every product with amazing discounts."</p>
+                    <p class="author">Anchit Gupta</p>
+                </div>
+                <div class="testimonial-card">
+                    <p>"The Diabetes Care Plan from 1mg makes Diabetes care much more affordable... I have saved some 12-15 thousand in the first 3 months."</p>
+                    <p class="author">Rakesh Gupta</p>
+                </div>
+            </div>
+        </section>
+        <section class="careplan-faq">
+            <h2>Frequently Asked Questions</h2>
+            <div class="faq-grid">
+                <div class="faq-item">
+                    <h4>How do I avail discount?</h4>
+                    <p>Discount coupons are auto-applied on your cart after becoming a Care Plan user. Get an additional 4% over all offers on health products, usable up to 50 times within the membership period for cart values up to ₹15,000.</p>
+                </div>
+                <div class="faq-item">
+                    <h4>Terms & conditions around Free Shipping?</h4>
+                    <p>Members get free shipping on 20 orders during the membership period for orders above ₹249. Unlimited free shipping on orders above ₹800.</p>
+                </div>
+                <div class="faq-item">
+                    <h4>Is the membership fee final?</h4>
+                    <p>The membership plan is offered at an introductory price, subject to change at Tata 1mg's discretion. Renewals will be at updated prices.</p>
+                </div>
+                <div class="faq-item">
+                    <h4>Can I cancel my subscription plan?</h4>
+                    <p>You can cancel before using any benefits for a full refund. No refunds are available after using any benefit.</p>
+                </div>
+            </div>
+        </section>
+        <section class="careplan-footer-links">
+            <div class="footer-column">
+                <a href="#">About Us</a>
+                <a href="#">Contact Us</a>
+                <a href="#">Care Plan</a>
+            </div>
+        </section>
+        <section class="careplan-disclaimer">
+            <p>© 2025 Tata 1mg. All rights reserved. All medicines are dispensed in compliance with the Drugs and Cosmetics Act, 1940 and Drugs and Cosmetics Rules, 1945.</p>
+        </section>
+    </main>
 </body>
 </html>
