--- a/labtests.html
+++ b/labtests.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Header -->
     <header>
         <div class="header-top">
             <div class="logo">
@@ -36,7 +35,6 @@
         </div>
     </header>
 
-<!-- Search Section -->
 <section class="search-section">
     <div class="location">
         <img src="https://www.iconpacks.net/icons/2/free-location-icon-2952-thumb.png" alt="Location Icon">
@@ -45,7 +43,7 @@
     <input type="text" class="search-bar" placeholder="Search for Medicines and Health Products">
 </section>
 
-    <!-- Banner -->
+    <!-- Bnner -->
     <section class="banner">
         <h1>Lab Test From The Comfort Of Your Home</h1>
         <p>Trusted by 40 Lakhs+ satisfied customers | 1 Crore+ lab tests booked</p>
@@ -138,7 +136,6 @@
         <button class="find-tests">FIND YOUR TESTS</button>
     </section>
 
-    <!-- Popular Health Checkups -->
     <section class="health-concerns">
         <h3>Popular health checkups</h3>
         <div class="concerns-grid health-checkups">
@@ -188,21 +185,9 @@
         </div>
     </section>
 
-    <!-- Call-to-Action Section (Second Image) -->
-    <section class="cta-section">
-        <h3>Want to book lab tests in bulk?</h3>
-        <p>Get customized health packages at best prices</p>
-        <button class="cta-button">CONTACT US</button>
-    </section>
-
     <!-- App Download Section (Third Image) -->
     <section class="app-download-section">
         <div class="app-content">
-            <div class="app-images">
-                <img src="phone1.png" alt="Phone Screen 1">
-                <img src="phone2.png" alt="Phone Screen 2">
-            </div>
-            
         </div>
         <div class="app-description">
             <h4>Keep your health in check with Tata 1mg: Lab tests just a click away</h4>
