--- a/partnerships.html
+++ b/partnerships.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tata 1mg - Partnerships</title>
-    <link rel="stylesheet" href="styles.css"></head>
+    <title>Partnerships</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
 <body>
-    <!-- Header -->
     <header>
         <div class="header-top">
             <div class="logo">
                 <a href="medicines.html">
-                <img src="asset/logo.jpg" alt="Tata 1mg Logo">
+                    <img src="asset/logo.jpg" alt="Tata 1mg Logo">
                 </a>
             </div>
             
@@ -34,13 +34,131 @@
             </div>
         </div>
     </header>
-
-    <!-- Partnerships Content -->
-    <section class="content-section">
-        <h1>Partnerships</h1>
-        <p>This is the Partnerships page of Tata 1mg. Learn about our collaborations and partnership opportunities here.</p>
-    </section>
-    <script>script.js</script>
-
+    <main>
+        <section class="partnerships-hero">
+            <div class="hero-content">
+                <div class="hero-text">
+                    <img src="partnerships-logo.png" alt="Partnerships Logo" class="hero-logo">
+                    <h1>Partnerships</h1>
+                    <h2>Let’s Empower Healthcare Together</h2>
+                    <p>Partner with India’s trusted healthcare platform to deliver care, enhance efficiency, and improve health outcomes.</p>
+                    <button class="know-more-btn">Know more about us</button>
+                </div>
+                <div class="hero-image">
+                    <img src="partnerships-hero-image.png" alt="Partnerships Hero Image">
+                </div>
+            </div>
+        </section>
+        <section class="partnerships-solutions">
+            <h2>Tailored Solutions for Every Need</h2>
+            <div class="solutions-grid">
+                <div class="solution-card">
+                    <img src="corporate-wellness.png" alt="Corporate Wellness">
+                    <h3>Corporate Wellness</h3>
+                    <p>Support your team’s well-being with cashless pharmacy, health checkups, and online doctor consultations.</p>
+                    <span class="read-more">Know more</span>
+                </div>
+                <div class="solution-card">
+                    <img src="hospital-services.png" alt="Hospital Services">
+                    <h3>Hospital Services</h3>
+                    <p>Streamline operations with one-stop procurement, tech-enabled operations, and patient lifecycle management.</p>
+                    <span class="read-more">Know more</span>
+                </div>
+                <div class="solution-card">
+                    <img src="patient-support.png" alt="Patient Support Program">
+                    <h3>Patient Support Program</h3>
+                    <p>Simplify patient outreach with trusted distribution, tailored programs, and data-driven insights.</p>
+                    <span class="read-more">Know more</span>
+                </div>
+                <div class="solution-card">
+                    <img src="insurance.png" alt="Insurance">
+                    <h3>Insurance</h3>
+                    <p>Revolutionize offerings with pan-India services, cashless pharmacy, and diagnostics.</p>
+                    <span class="read-more">Know more</span>
+                </div>
+                <div class="solution-card">
+                    <img src="strategic-partners.png" alt="Strategic Partners">
+                    <h3>Strategic Partners</h3>
+                    <p>Optimize your ecosystem with API integration, SSO integration, and done-in-one ordering.</p>
+                    <span class="read-more">Know more</span>
+                </div>
+                <div class="solution-card">
+                    <img src="health-associates.png" alt="Health Associates">
+                    <h3>Health Associates</h3>
+                    <p>Join our network to bring quality healthcare to your community and build a successful business.</p>
+                    <span class="read-more">Know more</span>
+                </div>
+                <div class="solution-card">
+                    <img src="advertise.png" alt="Advertise with us">
+                    <h3>Advertise with us</h3>
+                    <p>Enhance brand visibility with advanced analytics, scalable solutions, and a large audience.</p>
+                    <span class="read-more">Know more</span>
+                </div>
+                <div class="solution-card">
+                    <img src="collection-centres.png" alt="Authorised Collection Centres">
+                    <h3>Authorised Collection Centres</h3>
+                    <p>Deliver high-quality diagnostics with nominal investment and comprehensive support.</p>
+                    <span class="read-more">Know more</span>
+                </div>
+            </div>
+        </section>
+        <section class="partnerships-ceo-message">
+            <h2>A Message from Our CEO</h2>
+            <div class="ceo-message-content">
+                <div class="ceo-text">
+                    <p>We are driven by a singular mission to make high-quality healthcare understandable, accessible, and affordable for millions across India. In today’s fast-paced world, healthcare is not just limited to treatment; it’s about education, prevention, and proactive engagement.</p>
+                    <p>As we continue to innovate and expand, our commitment to excellence and integrity remains steadfast. We are proud to partner with businesses - both established and emerging - that share our passion for making a meaningful impact.</p>
+                    <p>To our current and future partners—your trust in Tata 1mg is what inspires us. Together, we can empower communities and revolutionize healthcare accessibility for a healthier tomorrow.</p>
+                    <p class="author">Prashant Tandon<br>Chief Executive Officer</p>
+                </div>
+                <div class="ceo-image">
+                    <img src="ceo-image.png" alt="CEO Image">
+                </div>
+            </div>
+        </section>
+        <section class="partnerships-form">
+            <h2>Let's Collaborate for Success</h2>
+            <form class="collaboration-form">
+                <input type="text" placeholder="Name*" required>
+                <input type="email" placeholder="Work Email ID*" required>
+                <div class="contact-number">
+                    <span>+91</span>
+                    <input type="tel" placeholder="Contact number*" required>
+                </div>
+                <input type="text" placeholder="Organisation Name*" required>
+                <select required>
+                    <option value="" disabled selected>Employee Strength*</option>
+                    <option value="less-500">Less than 500</option>
+                    <option value="500-2000">500 to 2000</option>
+                    <option value="more-2000">More than 2000</option>
+                </select>
+                <select required>
+                    <option value="" disabled selected>Services you would like to know about*</option>
+                    <option value="health-checks">Health Checks</option>
+                    <option value="medicine-delivery">Medicine Delivery</option>
+                    <option value="consultations">Consultations</option>
+                    <option value="insurance-products">Insurance Products</option>
+                    <option value="medical-rooms">Medical Rooms</option>
+                    <option value="other">Other: Please mention in the requirements</option>
+                </select>
+                <textarea placeholder="Please mention your requirement"></textarea>
+                <button type="submit" class="submit-btn">Get In Touch</button>
+            </form>
+            <div class="form-success" style="display: none;">
+                <p>Thank you! Your request has been registered. We will get in touch with you shortly.</p>
+                <button class="okay-btn">Okay!</button>
+            </div>
+        </section>
+        <section class="partnerships-footer-links">
+            <div class="footer-column">
+                <a href="#">About Us</a>
+                <a href="#">Contact Us</a>
+                <a href="#">Our Solutions</a>
+            </div>
+        </section>
+        <section class="partnerships-disclaimer">
+            <p>© 2025 Tata 1mg. All rights reserved. All medicines are dispensed in compliance with the Drugs and Cosmetics Act, 1940 and Drugs and Cosmetics Rules, 1945.</p>
+        </section>
+    </main>
 </body>
 </html>
