--- a/careplan.html
+++ b/careplan.html
@@ -78,7 +78,7 @@
                     <p>Same-day or next-day delivery on available medicines in selected cities.</p>
                 </div>
             </div>
-            <h2>Additional Benefits</h2>
+            <h2 class="highlights">Additional Benefits</h2>
             <div class="additional-benefits-grid">
                 <div class="benefit-card">
                     <img src="early-access.png" alt="Early Sale Access">
