just before final preparation

--- a/consultdoctors.html
+++ b/consultdoctors.html
@@ -13,7 +13,7 @@
         <div class="header-top">
             <div class="logo">
                 <a href="medicines.html">
-                <img src="asset/logo.jpg" alt="Tata 1mg Logo">
+                    <img src="asset/logo.jpg" alt="Tata 1mg Logo">
                 </a>
             </div>
             
@@ -26,6 +26,7 @@
                     <li><a href="ayurveda.html">AYURVEDA</a></li>
                     <li><a href="partnerships.html">PARTNERSHIPS</a></li>
                     <li><a href="careplan.html">CARE PLAN</a></li>
+                    <li><a href="medibot.html">MEDIBOT</a></li>
                 </ul>
             </nav>
             <div class="header-right">
