--- a/medicines.html
+++ b/medicines.html
@@ -24,6 +24,7 @@
                     <li><a href="ayurveda.html">AYURVEDA</a></li>
                     <li><a href="partnerships.html">PARTNERSHIPS</a></li>
                     <li><a href="careplan.html">CARE PLAN</a></li>
+                    <li><a href="medibot.html">MEDIBOT</a></li>
                 </ul>
             </nav>
             <div class="header-right">
@@ -71,7 +72,7 @@
     <h3>Shop by health concerns</h3>
     <div class="concerns-grid" id="grid">
         <div class="concern-card">
-            <img src="asset/diabeted-care.avif" alt="Diabetes Care">
+            <img src="asset/diabeted-care copy.png" alt="Diabetes Care">
             <p>Diabetes Care</p>
         </div>
         <div class="concern-card">
@@ -163,7 +164,7 @@
         </div>
         <div class="concern-card">
             <img src="asset/petcare.webp" alt="Pet Care">
-            <p>Body Care</p>
+            <p>Pet Care</p>
         </div>
         <div class="concern-card">
             <img src="asset/mengrooming.webp" alt="Men's Grooming">
