--- a/auth.html
+++ b/auth.html
@@ -26,6 +26,7 @@
                     <li><a href="ayurveda.html">AYURVEDA</a></li>
                     <li><a href="partnerships.html">PARTNERSHIPS</a></li>
                     <li><a href="careplan.html">CARE PLAN</a></li>
+                    <li><a href="medibot.html">MEDIBOT</a></li>
                 </ul>
             </nav>
             <div class="header-right">
