--- a/consultdoctors.html
+++ b/consultdoctors.html
@@ -135,9 +135,97 @@
     <div class="faq-item">
         <h4>Do you have a “refund” policy?</h4>
         <p>We have a “take-it-easy” policy. If for any reason you’re not convinced with your online consultation, you can write to us at contact@1mgdoctors.com and we will review the consult with the doctor – seeking clarifications on your concerns. 100% refund will be given in genuine cases.</p>
-    </div>
+    </div>  
     <button class="faq-back-to-top">↑</button>
 </section>
+
+<section class="app-download-section">
+        <div class="app-content">
+        </div>
+        
+        <div class="stats-section">
+            <div class="stat">
+                <h3>260M+</h3>
+                <p>Visitors</p>
+            </div>
+            <div class="stat">
+                <h3>31M+</h3>
+                <p>Orders Delivered</p>
+            </div>
+            <div class="stat">
+                <h3>1800+</h3>
+                <p>Cities</p>
+            </div>
+        </div>
+        <div class="footer-links">
+            <div class="footer-column">
+                <h4>KNOW US</h4>
+                <ul>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="#">Press Coverage</a></li>
+                    <li><a href="#">Business Partnership</a></li>
+                    <li><a href="#">Become Health Partner</a></li>
+                    <li><a href="#">Corporate Governance</a></li>
+                </ul>
+            </div>
+            <div class="footer-column">
+                <h4>OUR POLICIES</h4>
+                <ul>
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Terms and Conditions</a></li>
+                    <li><a href="#">Editorial Policy</a></li>
+                    <li><a href="#">Return Policy</a></li>
+                    <li><a href="#">IP Policy</a></li>
+                    <li><a href="#">Grievance Redressal Policy</a></li>
+                    <li><a href="#">Fake Jobs and Fraud Disclaimer</a></li>
+                </ul>
+            </div>
+            <div class="footer-column">
+                <h4>Our Services</h4>
+                <ul>
+                    <li><a href="#">Order Medicines</a></li>
+                    <li><a href="#">Book Lab Tests</a></li>
+                    <li><a href="#">Consult a Doctor</a></li>
+                    <li><a href="#">Ayurveda Articles</a></li>
+                    <li><a href="#">Hindi Articles</a></li>
+                    <li><a href="#">Care Plan</a></li>
+                </ul>
+            </div>
+            <div class="footer-column">
+                <h4>Connect</h4>
+                <p>Social Links</p>
+                <div class="social-links">
+                    <a href="#"><img src="asset/facebook.png" alt="Facebook"></a>
+                    <a href="#"><img src="asset/twitter.png" alt="Twitter"></a>
+                    <a href="#"><img src="asset/youtube.png" alt="YouTube"></a>
+                    <a href="#"><img src="asset/instagram.webp" alt="Instagram"></a>
+                    <a href="#"><img src="asset/linkedin.webp" alt="LinkedIn"></a>
+                </div>
+                <p>Want daily dose of health?</p>
+                <button class="sign-up">SIGN UP</button>
+            </div>
+            <div class="footer-column">
+                <h4>DOWNLOAD APP</h4>
+                <div class="app-buttons">
+                    <a href="#"><img src="asset/googleplay.webp" alt="Google Play"></a>
+                    <a href="#"><img src="asset/appstore.svg" alt="App Store"></a>
+                </div>
+            </div>
+        </div>
+        
+        <div class="footer-copyright">
+            <p>© 2025 Tata 1mg. All rights reserved. All medicines are dispensed in compliance with the Drugs and Cosmetics Act, 1940 and Drugs and Cosmetics Rules, 1945. We do not process requests for Schedule X and habit forming drugs.</p>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="contact-info">
+        <p>Need help? Call us at 1800-212-2323 or get a call back from our health advisor</p>
+        <input type="text" placeholder="Enter Phone Number">
+        <button>Get a free call back</button>
+    </footer>
+
 
     <script src="script.js"></script>
 </body>
