--- a/labtests.html
+++ b/labtests.html
@@ -72,13 +72,6 @@
         </div>
         <button>VIEW POPULAR PACKAGES</button>
         <div class="banner-nav">
-            <button class="prev">◄</button>
-            <div class="dots">
-                <span class="dot"></span>
-                <span class="dot active"></span>
-                <span class="dot"></span>
-            </div>
-            <button class="next">►</button>
         </div>
     </section>
 
@@ -179,10 +172,7 @@
         <div class="testimonial">
             <p>"I had to get an MRI done for my mother and a relative recommended 1mg. Booked the test online with a reputed lab near my home. Received a call from 1mg's radiology expert who helped us with test preparation instructions. The experience inside lab was very good!"</p>
             <p class="author">Annesha</p>
-            <div class="testimonial-nav">
-                <button class="prev">◄</button>
-                <button class="next">►</button>
-            </div>
+            
         </div>
     </section>
 
@@ -262,11 +252,11 @@
                 <h4>Connect</h4>
                 <p>Social Links</p>
                 <div class="social-links">
-                    <a href="#"><img src="facebook.png" alt="Facebook"></a>
-                    <a href="#"><img src="twitter.png" alt="Twitter"></a>
-                    <a href="#"><img src="youtube.png" alt="YouTube"></a>
-                    <a href="#"><img src="instagram.png" alt="Instagram"></a>
-                    <a href="#"><img src="linkedin.png" alt="LinkedIn"></a>
+                    <a href="#"><img src="asset/facebook.png" alt="Facebook"></a>
+                    <a href="#"><img src="asset/twitter.png" alt="Twitter"></a>
+                    <a href="#"><img src="asset/youtube.png" alt="YouTube"></a>
+                    <a href="#"><img src="asset/instagram.webp" alt="Instagram"></a>
+                    <a href="#"><img src="asset/linkedin.webp" alt="LinkedIn"></a>
                 </div>
                 <p>Want daily dose of health?</p>
                 <button class="sign-up">SIGN UP</button>
@@ -274,8 +264,8 @@
             <div class="footer-column">
                 <h4>DOWNLOAD APP</h4>
                 <div class="app-buttons">
-                    <a href="#"><img src="google-play.png" alt="Google Play"></a>
-                    <a href="#"><img src="app-store.png" alt="App Store"></a>
+                    <a href="#"><img src="asset/googleplay.webp" alt="Google Play"></a>
+                    <a href="#"><img src="asset/appstore.svg" alt="App Store"></a>
                 </div>
             </div>
         </div>
