--- a/partnerships.html
+++ b/partnerships.html
@@ -39,14 +39,12 @@
         <section class="partnerships-hero">
             <div class="hero-content">
                 <div class="hero-text">
-                    <img src="partnerships-logo.png" alt="Partnerships Logo" class="hero-logo">
                     <h1>Partnerships</h1>
                     <h2>Let’s Empower Healthcare Together</h2>
                     <p>Partner with India’s trusted healthcare platform to deliver care, enhance efficiency, and improve health outcomes.</p>
                     <button class="know-more-btn">Know more about us</button>
                 </div>
                 <div class="hero-image">
-                    <img src="partnerships-hero-image.png" alt="Partnerships Hero Image">
                 </div>
             </div>
         </section>
@@ -54,52 +52,44 @@
             <h2>Tailored Solutions for Every Need</h2>
             <div class="solutions-grid">
                 <div class="solution-card">
-                    <img src="corporate-wellness.png" alt="Corporate Wellness">
+                    <img src="https://images.unsplash.com/photo-1516321318423-f06f85e504b3" alt="Corporate Wellness">
                     <h3>Corporate Wellness</h3>
                     <p>Support your team’s well-being with cashless pharmacy, health checkups, and online doctor consultations.</p>
-                    <span class="read-more">Know more</span>
                 </div>
                 <div class="solution-card">
-                    <img src="hospital-services.png" alt="Hospital Services">
+                    <img src="asset/hospital.jpeg" alt="Hospital Services">
                     <h3>Hospital Services</h3>
                     <p>Streamline operations with one-stop procurement, tech-enabled operations, and patient lifecycle management.</p>
-                    <span class="read-more">Know more</span>
                 </div>
                 <div class="solution-card">
-                    <img src="patient-support.png" alt="Patient Support Program">
+                    <img src="https://images.unsplash.com/photo-1600585154340-be6161a56a0c" alt="Patient Support Program">
                     <h3>Patient Support Program</h3>
                     <p>Simplify patient outreach with trusted distribution, tailored programs, and data-driven insights.</p>
-                    <span class="read-more">Know more</span>
                 </div>
                 <div class="solution-card">
-                    <img src="insurance.png" alt="Insurance">
+                    <img src="https://images.unsplash.com/photo-1454165804606-c3d57bc86b40" alt="Insurance">
                     <h3>Insurance</h3>
                     <p>Revolutionize offerings with pan-India services, cashless pharmacy, and diagnostics.</p>
-                    <span class="read-more">Know more</span>
                 </div>
                 <div class="solution-card">
-                    <img src="strategic-partners.png" alt="Strategic Partners">
+                    <img src="https://images.unsplash.com/photo-1517048676732-d65bc937f952" alt="Strategic Partners">
                     <h3>Strategic Partners</h3>
                     <p>Optimize your ecosystem with API integration, SSO integration, and done-in-one ordering.</p>
-                    <span class="read-more">Know more</span>
                 </div>
                 <div class="solution-card">
-                    <img src="health-associates.png" alt="Health Associates">
+                    <img src="https://images.unsplash.com/photo-1532622785990-d2c36a76f5a6" alt="Health Associates">
                     <h3>Health Associates</h3>
                     <p>Join our network to bring quality healthcare to your community and build a successful business.</p>
-                    <span class="read-more">Know more</span>
                 </div>
                 <div class="solution-card">
-                    <img src="advertise.png" alt="Advertise with us">
+                    <img src="https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d" alt="Advertise with us">
                     <h3>Advertise with us</h3>
                     <p>Enhance brand visibility with advanced analytics, scalable solutions, and a large audience.</p>
-                    <span class="read-more">Know more</span>
                 </div>
                 <div class="solution-card">
-                    <img src="collection-centres.png" alt="Authorised Collection Centres">
+                    <img src="asset/authorized.jpg" alt="Authorised Collection Centres">
                     <h3>Authorised Collection Centres</h3>
                     <p>Deliver high-quality diagnostics with nominal investment and comprehensive support.</p>
-                    <span class="read-more">Know more</span>
                 </div>
             </div>
         </section>
@@ -113,7 +103,7 @@
                     <p class="author">Prashant Tandon<br>Chief Executive Officer</p>
                 </div>
                 <div class="ceo-image">
-                    <img src="ceo-image.png" alt="CEO Image">
+                    <img src="asset/prashant.jpg" alt="CEO Image">
                 </div>
             </div>
         </section>
@@ -150,6 +140,93 @@
                 <button class="okay-btn">Okay!</button>
             </div>
         </section>
+
+<section class="app-download-section">
+    <div class="app-content">
+    </div>
+    
+    <div class="stats-section">
+        <div class="stat">
+            <h3>260M+</h3>
+            <p>Visitors</p>
+        </div>
+        <div class="stat">
+            <h3>31M+</h3>
+            <p>Orders Delivered</p>
+        </div>
+        <div class="stat">
+            <h3>1800+</h3>
+            <p>Cities</p>
+        </div>
+    </div>
+    <div class="footer-links">
+        <div class="footer-column">
+            <h4>KNOW US</h4>
+            <ul>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Contact Us</a></li>
+                <li><a href="#">Press Coverage</a></li>
+                <li><a href="#">Business Partnership</a></li>
+                <li><a href="#">Become Health Partner</a></li>
+                <li><a href="#">Corporate Governance</a></li>
+            </ul>
+        </div>
+        <div class="footer-column">
+            <h4>OUR POLICIES</h4>
+            <ul>
+                <li><a href="#">Privacy Policy</a></li>
+                <li><a href="#">Terms and Conditions</a></li>
+                <li><a href="#">Editorial Policy</a></li>
+                <li><a href="#">Return Policy</a></li>
+                <li><a href="#">IP Policy</a></li>
+                <li><a href="#">Grievance Redressal Policy</a></li>
+                <li><a href="#">Fake Jobs and Fraud Disclaimer</a></li>
+            </ul>
+        </div>
+        <div class="footer-column">
+            <h4>Our Services</h4>
+            <ul>
+                <li><a href="#">Order Medicines</a></li>
+                <li><a href="#">Book Lab Tests</a></li>
+                <li><a href="#">Consult a Doctor</a></li>
+                <li><a href="#">Ayurveda Articles</a></li>
+                <li><a href="#">Hindi Articles</a></li>
+                <li><a href="#">Care Plan</a></li>
+            </ul>
+        </div>
+        <div class="footer-column">
+            <h4>Connect</h4>
+            <p>Social Links</p>
+            <div class="social-links">
+                <a href="#"><img src="asset/facebook.png" alt="Facebook"></a>
+                <a href="#"><img src="asset/twitter.png" alt="Twitter"></a>
+                <a href="#"><img src="asset/youtube.png" alt="YouTube"></a>
+                <a href="#"><img src="asset/instagram.webp" alt="Instagram"></a>
+                <a href="#"><img src="asset/linkedin.webp" alt="LinkedIn"></a>
+            </div>
+            <p>Want daily dose of health?</p>
+            <button class="sign-up">SIGN UP</button>
+        </div>
+        <div class="footer-column">
+            <h4>DOWNLOAD APP</h4>
+            <div class="app-buttons">
+                <a href="#"><img src="asset/googleplay.webp" alt="Google Play"></a>
+                <a href="#"><img src="asset/appstore.svg" alt="App Store"></a>
+            </div>
+        </div>
+    </div>
+    
+    <div class="footer-copyright">
+        <p>© 2025 Tata 1mg. All rights reserved. All medicines are dispensed in compliance with the Drugs and Cosmetics Act, 1940 and Drugs and Cosmetics Rules, 1945. We do not process requests for Schedule X and habit forming drugs.</p>
+    </div>
+</section>
+
+<!-- Footer -->
+<footer class="contact-info">
+    <p>Need help? Call us at 1800-212-2323 or get a call back from our health advisor</p>
+    <input type="text" placeholder="Enter Phone Number">
+    <button>Get a free call back</button>
+</footer>
         <section class="partnerships-footer-links">
             <div class="footer-column">
                 <a href="#">About Us</a>
